continuing refactoring, almost starts up